--- a/index.html
+++ b/index.html
@@ -38,7 +38,11 @@
             <div class="col-6">
                 <h3 class="text-center">Search Results</h3>
                 <div id="songs" class="col-12 m-0">
-                    <!-- template to generate -->
+                    <div class="card" style="width: 25rem;">
+                        <ul class="list-group list-group-flush">
+                          <!-- <li class="list-group-item"><img src="//placehold.it/75x75"> Artist, Album, Song, Price</li> -->
+                        </ul>
+                      </div>
                 </div>
             </div>
             <div class="col-6">
