currentSong section added

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </section>
 
         <section class="row">
-            <div class="col-6">
+            <div class="col-3">
                 <h3 class="text-center">Search Results</h3>
                 <div id="songs" class="col-12 m-0">
                     <div class="card" style="width: 25rem;">
@@ -45,9 +45,22 @@
                       </div>
                 </div>
             </div>
-            <div class="col-6">
-                <h3 class="text-center">Playlist</h3>
-                <div class="col-12 m-0" id="playlist">
+            <div class="col-6" id="currentSong">
+                <!-- <div class="card">
+                    <img src="//placehold.it/100x100" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Card title</h5>
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                    <div class="card-body">
+                      <a href="#" class="card-link">Card link</a>
+                      <a href="#" class="card-link">Another link</a>
+                    </div>
+                  </div> -->
+            </div>
+            <div class="col-3">
+                <h3 class="text-center">My Music</h3>
+                <div class="col-12 m-0" id="myMusic">
                     <!-- template for playlist -->
                 </div>
             </div>
