--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/style/main.css">
-    <title>music-is-fun</title>
+    <title>Music Is Badass</title>
 </head>
 
 <body>
@@ -15,16 +15,13 @@
         <nav class="navbar navbar-dark navbar-expand bg-dark text-light">
             <a class="navbar-brand" href="#">
                 <img src="assets/img/logo.png" width="45" height="45" alt="" loading="lazy">
-                <span class="ml-2">music-is-fun</span>
+                <span class="ml-2">Music is Badass</span>
             </a>
         </nav>
     </header>
     <main class="container-fluid">
         <section class="row">
-            <div class="col-12 bannerStyle">
-                <p>Music is Fun</p>
-            </div>
-            <div class="offset-8 col-4">
+            <div class="col-4 my-3">
                 <form onsubmit="app.songsController.search(event)">
                     <input type="text" class="form-control" name="query" placeholder="Search For Music" />
                     <button class="btn btn-success mt-1 form-control" type="submit">
@@ -45,7 +42,8 @@
                     </div>
                 </div>
             </div>
-            <div class="col-6" id="currentSong">
+            <div class="col-6 mt-3" id="currentSong">
+                <!-- <audio src="" controls></audio> -->
                 <!-- <div class="card">
                     <img src="//placehold.it/100x100" class="card-img-top" alt="...">
                     <div class="card-body">
