--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <section class="row">
             <div class="col-3">
                 <h3 class="text-center">Search Results</h3>
-                <div id="songs" class="col-12 m-0">
+                <div id="songs" class="col-12 m-0 scroll">
                     <div class="card" style="width: 25rem;">
                         <ul class="list-group list-group-flush">
                             <!-- <li class="list-group-item"><img src="//placehold.it/75x75"> Artist, Album, Song, Price</li> -->
@@ -42,7 +42,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-6 mt-3" id="currentSong">
+            <div class="col-6 mt-3 d-flex justify-content-center" id="currentSong">
                 <!-- <audio src="" controls></audio> -->
                 <!-- <div class="card">
                     <img src="//placehold.it/100x100" class="card-img-top" alt="...">
